deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderdeployment
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: http
        image: dockerrock123/orderservice:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "500m"
            memory: "124Mi"
          limits:
            cpu: "1000m"
            memory: "200Mi"
        #readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 5     
        #livenessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 5    
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    app: order
spec:
  type: NodePort
  ports: # Service can expose different port
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
     
  selector:
    app: order
