ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
spec:
  rules:
  - host: mykube.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orderservice
            port:
              number: 80
