orderservice-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orderservice-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orderinfo
spec:
  hosts:
  - "*"
  gateways:
  - orderservice-gateway
  http:
  - match:
    - uri:
        exact: /orderpage
    route:
    - destination:
        host: orderservice
        port:
          number: 80
